Improve theme parity, readability, and project guides.
Unify light/dark UI class coverage with fallback styling for missing classes,
standardize core typography/button/input/table behavior, and refresh docs with
run-focused README plus simplified Start guides and change summary.

Co-authored-by: Cursor <cursoragent@cursor.com>